--- a/Training.ipynb
+++ b/Training.ipynb
@@ -85,34 +85,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training PSNR: 12.206999722953146\n",
-      "Training PSNR: 11.709859417467182\n",
-      "Training PSNR: 7.384132405400079\n",
-      "Training PSNR: 10.284994474581893\n",
-      "Training PSNR: 12.744634156918684\n",
-      "Training PSNR: 11.338436516936152\n",
-      "Training PSNR: 14.938831855132307\n",
-      "Training PSNR: 10.936118436929476\n",
-      "Training PSNR: 9.770814659402967\n",
-      "Training PSNR: 12.695374029402345\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "CUDA out of memory. Tried to allocate 2.44 GiB (GPU 0; 3.00 GiB total capacity; 3.72 GiB already allocated; 0 bytes free; 3.80 GiB reserved in total by PyTorch)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m val_loader \u001b[38;5;241m=\u001b[39m RaysData(images_val, K_val, c2ws_val)\n\u001b[0;32m      8\u001b[0m test_loader \u001b[38;5;241m=\u001b[39m RaysData(images_train[:\u001b[38;5;241m60\u001b[39m], K_test, c2ws_test)\n\u001b[1;32m----> 9\u001b[0m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_epochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32me:\\PROJECT\\NeRF-Implementation\\train.py:64\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(model, train_loader, val_loader, test_loader, optimizer, criterion, num_epochs, batch_size, device)\u001b[0m\n\u001b[0;32m     53\u001b[0m torch\u001b[38;5;241m.\u001b[39msave(model\u001b[38;5;241m.\u001b[39mstate_dict(),\n\u001b[0;32m     54\u001b[0m            \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcheckpoints/nerf_checkpoint_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtimestamp\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     56\u001b[0m \u001b[38;5;66;03m# create PSNR plot\u001b[39;00m\n\u001b[0;32m     57\u001b[0m \u001b[38;5;66;03m# plt.figure()\u001b[39;00m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m# plt.plot(range(25, 3001, 25), psnr_scores)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;66;03m# plt.title('PSNR vs. Iteration')\u001b[39;00m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;66;03m# plt.savefig('plots/psnr_nerf.png')\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m \u001b[43mrender_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_loader\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32me:\\PROJECT\\NeRF-Implementation\\eval.py:19\u001b[0m, in \u001b[0;36mrender_images\u001b[1;34m(model, test_dataset)\u001b[0m\n\u001b[0;32m     17\u001b[0m points \u001b[38;5;241m=\u001b[39m points\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     18\u001b[0m rays_d \u001b[38;5;241m=\u001b[39m rays_d\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mrepeat(\u001b[38;5;241m1\u001b[39m, points\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m---> 19\u001b[0m rgb, sigmas \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrays_d\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m comp_rgb \u001b[38;5;241m=\u001b[39m volume_rendering(\n\u001b[0;32m     21\u001b[0m     sigmas, rgb, step_size\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m6.0\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m2.0\u001b[39m) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m64\u001b[39m)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# save image\u001b[39;00m\n",
-      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\modules\\module.py:727\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    725\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_slow_forward(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28minput\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    726\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 727\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    728\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m hook \u001b[38;5;129;01min\u001b[39;00m itertools\u001b[38;5;241m.\u001b[39mchain(\n\u001b[0;32m    729\u001b[0m         _global_forward_hooks\u001b[38;5;241m.\u001b[39mvalues(),\n\u001b[0;32m    730\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m    731\u001b[0m     hook_result \u001b[38;5;241m=\u001b[39m hook(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, result)\n",
-      "File \u001b[1;32me:\\PROJECT\\NeRF-Implementation\\model.py:44\u001b[0m, in \u001b[0;36mNeRF_Base.forward\u001b[1;34m(self, x, r_d)\u001b[0m\n\u001b[0;32m     41\u001b[0m r_d_encoded \u001b[38;5;241m=\u001b[39m positional_encoding(r_d, L\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)  \u001b[38;5;66;03m# [10000, 27]\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Process x through initial layers\u001b[39;00m\n\u001b[1;32m---> 44\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfc1_block1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_encoded\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrelu(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2_block1(x))\n\u001b[0;32m     46\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrelu(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3_block1(x))\n",
-      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\modules\\module.py:727\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    725\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_slow_forward(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28minput\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    726\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 727\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    728\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m hook \u001b[38;5;129;01min\u001b[39;00m itertools\u001b[38;5;241m.\u001b[39mchain(\n\u001b[0;32m    729\u001b[0m         _global_forward_hooks\u001b[38;5;241m.\u001b[39mvalues(),\n\u001b[0;32m    730\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m    731\u001b[0m     hook_result \u001b[38;5;241m=\u001b[39m hook(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, result)\n",
-      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\modules\\activation.py:102\u001b[0m, in \u001b[0;36mReLU.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[1;32m--> 102\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minplace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minplace\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\functional.py:1136\u001b[0m, in \u001b[0;36mrelu\u001b[1;34m(input, inplace)\u001b[0m\n\u001b[0;32m   1134\u001b[0m     result \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrelu_(\u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m   1135\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1136\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1137\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 2.44 GiB (GPU 0; 3.00 GiB total capacity; 3.72 GiB already allocated; 0 bytes free; 3.80 GiB reserved in total by PyTorch)"
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.62356865158938\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 10.393073334336103\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 10.928579713291915\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 11.894772248508696\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.231493716007977\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 13.70380789790552\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 11.611106862064947\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 10.885758250600981\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 10.659999743017764\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 10.239405440068172\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 13.156731709140086\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 11.351094897153187\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 10.506251831579089\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.071143384234762\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.267660282240751\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 11.654124634732819\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 10.423323520840775\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.50026555959948\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.951764796696231\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.849192854438273\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 13.127294008154308\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.511327243637094\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.540389123848874\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 11.645584098885003\n",
+      "ray_o torch.Size([32, 3])\n",
+      "rays_d torch.Size([32, 3])\n",
+      "t torch.Size([64])\n",
+      "points torch.Size([64, 32, 3])\n",
+      "Training PSNR: 12.246675666032584\n",
+      "t torch.Size([64])\n"
      ]
     }
    ],
@@ -121,11 +219,60 @@
     "optimizer = optim.Adam(model.parameters(),lr= 10e-4)\n",
     "criterion = nn.MSELoss()\n",
     "batch_size = 32\n",
-    "num_epochs = 10\n",
+    "num_epochs = 100\n",
     "train_loader = RaysData(images_train,K_train,c2ws_train)\n",
     "val_loader = RaysData(images_val, K_val, c2ws_val)\n",
     "test_loader = RaysData(images_train[:60], K_test, c2ws_test)\n",
     "train(model, train_loader, val_loader, test_loader, optimizer, criterion, num_epochs=num_epochs, batch_size=batch_size, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 1, 1])\n",
+      "torch.Size([32, 3])\n",
+      "torch.Size([64, 32, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.randn(64).unsqueeze(-1).unsqueeze(-1)\n",
+    "print(a.shape)\n",
+    "b = torch.randn((32,3))\n",
+    "print(b.shape)\n",
+    "c = a*b\n",
+    "print(c.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 4.],\n",
+       "        [2., 5.],\n",
+       "        [3., 6.]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.Tensor([1,2,3])\n",
+    "b = torch.Tensor([4,5,6])\n",
+    "c = torch.stack((a,b),dim=-1)\n",
+    "c"
    ]
   },
   {
