--- a/Training.ipynb
+++ b/Training.ipynb
@@ -85,132 +85,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.62356865158938\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 10.393073334336103\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 10.928579713291915\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 11.894772248508696\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.231493716007977\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 13.70380789790552\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 11.611106862064947\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 10.885758250600981\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 10.659999743017764\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 10.239405440068172\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 13.156731709140086\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 11.351094897153187\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 10.506251831579089\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.071143384234762\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.267660282240751\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 11.654124634732819\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 10.423323520840775\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.50026555959948\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.951764796696231\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.849192854438273\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 13.127294008154308\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.511327243637094\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.540389123848874\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 11.645584098885003\n",
-      "ray_o torch.Size([32, 3])\n",
-      "rays_d torch.Size([32, 3])\n",
-      "t torch.Size([64])\n",
-      "points torch.Size([64, 32, 3])\n",
-      "Training PSNR: 12.246675666032584\n",
-      "t torch.Size([64])\n"
+      "Training PSNR: 13.859389050796487\n",
+      "Training PSNR: 11.375910751987515\n",
+      "Training PSNR: 12.46124462978422\n",
+      "Training PSNR: 13.913269686306187\n",
+      "Training PSNR: 11.785611181498478\n",
+      "Training PSNR: 12.660786205931272\n",
+      "Training PSNR: 11.381140199323887\n",
+      "Training PSNR: 9.79670300814669\n",
+      "Training PSNR: 10.994457014286795\n",
+      "Training PSNR: 12.570654943404351\n",
+      "Training PSNR: 12.538048331118647\n",
+      "Training PSNR: 14.067156199951476\n",
+      "Training PSNR: 11.155669518189024\n",
+      "Training PSNR: 9.901007258811699\n",
+      "Training PSNR: 13.237616483723922\n",
+      "Training PSNR: 13.037226293572887\n",
+      "Training PSNR: 10.956436605660404\n",
+      "Training PSNR: 12.92935251350002\n",
+      "Training PSNR: 12.381255814561008\n",
+      "Training PSNR: 9.708685596918151\n",
+      "Training PSNR: 13.623684050933866\n",
+      "Training PSNR: 12.26391968600324\n",
+      "Training PSNR: 12.478711316942983\n",
+      "Training PSNR: 10.517049380141476\n",
+      "Training PSNR: 13.430530180697684\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA out of memory. Tried to allocate 2.44 GiB (GPU 0; 3.00 GiB total capacity; 3.72 GiB already allocated; 0 bytes free; 3.80 GiB reserved in total by PyTorch)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m val_loader \u001b[38;5;241m=\u001b[39m RaysData(images_val, K_val, c2ws_val)\n\u001b[0;32m      8\u001b[0m test_loader \u001b[38;5;241m=\u001b[39m RaysData(images_train[:\u001b[38;5;241m60\u001b[39m], K_test, c2ws_test)\n\u001b[1;32m----> 9\u001b[0m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_epochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32me:\\PROJECT\\NeRF-Implementation\\train.py:41\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(model, train_loader, val_loader, test_loader, optimizer, criterion, num_epochs, batch_size, device)\u001b[0m\n\u001b[0;32m     39\u001b[0m points \u001b[38;5;241m=\u001b[39m points\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     40\u001b[0m rays_d \u001b[38;5;241m=\u001b[39m rays_d\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mrepeat(\u001b[38;5;241m1\u001b[39m, points\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m---> 41\u001b[0m rgb, sigmas \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrays_d\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     42\u001b[0m comp_rgb \u001b[38;5;241m=\u001b[39m volume_rendering(\n\u001b[0;32m     43\u001b[0m     sigmas, rgb, step_size\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m6.0\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m2.0\u001b[39m) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m64\u001b[39m)\n\u001b[0;32m     44\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(comp_rgb, pixels)\n",
+      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\modules\\module.py:727\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    725\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_slow_forward(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28minput\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    726\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 727\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    728\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m hook \u001b[38;5;129;01min\u001b[39;00m itertools\u001b[38;5;241m.\u001b[39mchain(\n\u001b[0;32m    729\u001b[0m         _global_forward_hooks\u001b[38;5;241m.\u001b[39mvalues(),\n\u001b[0;32m    730\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m    731\u001b[0m     hook_result \u001b[38;5;241m=\u001b[39m hook(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, result)\n",
+      "File \u001b[1;32me:\\PROJECT\\NeRF-Implementation\\model.py:44\u001b[0m, in \u001b[0;36mNeRF_Base.forward\u001b[1;34m(self, x, r_d)\u001b[0m\n\u001b[0;32m     41\u001b[0m r_d_encoded \u001b[38;5;241m=\u001b[39m positional_encoding(r_d, L\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)  \u001b[38;5;66;03m# [10000, 27]\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Process x through initial layers\u001b[39;00m\n\u001b[1;32m---> 44\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfc1_block1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_encoded\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrelu(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc2_block1(x))\n\u001b[0;32m     46\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrelu(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfc3_block1(x))\n",
+      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\modules\\module.py:727\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    725\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_slow_forward(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28minput\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    726\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 727\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    728\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m hook \u001b[38;5;129;01min\u001b[39;00m itertools\u001b[38;5;241m.\u001b[39mchain(\n\u001b[0;32m    729\u001b[0m         _global_forward_hooks\u001b[38;5;241m.\u001b[39mvalues(),\n\u001b[0;32m    730\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m    731\u001b[0m     hook_result \u001b[38;5;241m=\u001b[39m hook(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, result)\n",
+      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\modules\\activation.py:102\u001b[0m, in \u001b[0;36mReLU.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[1;32m--> 102\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minplace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minplace\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\Anaconda3\\envs\\built-nerf\\lib\\site-packages\\torch\\nn\\functional.py:1136\u001b[0m, in \u001b[0;36mrelu\u001b[1;34m(input, inplace)\u001b[0m\n\u001b[0;32m   1134\u001b[0m     result \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrelu_(\u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m   1135\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1136\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1137\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 2.44 GiB (GPU 0; 3.00 GiB total capacity; 3.72 GiB already allocated; 0 bytes free; 3.80 GiB reserved in total by PyTorch)"
      ]
     }
    ],
@@ -228,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
